# horus

./: .gitignore  AUTHORS  COPYING  MEMO  Makefile.am  README  autogen.sh  configure.ac  horus_key.c  libtool  sysio.c
aes/: Makefile.am  README  aes.c  aes.h  aesni-intel_asm.S  aesni-intel_glue.c  asm-alternative.h  asm-bitops.h  asm-inst.h  asm-linkage.h  asm-swab.h  b128ops.h  bitops.h  bitsperlong.h  byteorder-generic.h  compiler.h  crypto.h  gf128mul.c  gf128mul.h  linux-linkage.h  linux-types.h  little_endian.h  stringify.h  swab.h  xts.c  xts.h
doc/: .gitignore  horus-protocol.tex  horus-sequence.txt  horus-todo.txt  horus.conf
doc/pics/: .gitignore  base.pic  interrupt.pic  keyexchange.pic  keyreg.pic  make-pdf.sh  make-pics.sh  test.tex
etc/: Makefile.am  dot.indent.pro  horus-newsyslog.conf  horus-setup-btio.sh  horus.py  kht-branch-depth-a0.sh  kht-branch-depth-a2.sh  kht-branch-depth-a4.sh  kht-branch-depth-a6.sh  kht-branch-depth-a8.sh  kht-branch-depth.awk  kht-branch-depth.sh  lasvegas-list.txt  lasvegas-yasu-aggregate-level.awk  lasvegas-yasu-aggregate-level.sh  lasvegas-yasu-init.sh  lasvegas-yasu-nthread-filter-sha1.awk  lasvegas-yasu-nthread-filter-sha1.sh  lasvegas-yasu-nthread.awk  lasvegas-yasu-nthread.gp  lasvegas-yasu-nthread.sh  libhorus-stop.sh.in  nthread-filter-sha1.sh  prepare-horus-files.sh  rwperformance-ceph.sh  rwperformance.awk  rwperformance.sh  server-conf.sh  test_aes_read_write.sh
horusfs/: Makefile.am  horus_attr.c  horus_util.c  horusfs.c  horusfs.h
lib/: Makefile.am  command.c  command.h  command_history.c  command_history.h  command_shell.c  command_shell.h  horus.c  horus.h  horus_attr.c  horus_attr.h  horus_crypt.c  horus_crypt.h  horus_key.c  horus_key.h  horus_stats.c  horus_stats.h  horusfs.h  horusio.c  horusio.h  kds_protocol.c  kds_protocol.h  log.c  log.h  minmax.h  network.c  network.h  openssl.c  openssl.h  shell.c  shell.h  shell_history.c  shell_history.h  sysio.c  syslog.c  terminal.c  terminal.h  thread.c  thread.h  timeval.h  (+4 more)
misc/: .gitignore  Makefile.am  horus-sequence.txt  horus.py  libhorus-env.csh.in  libhorus-env.sh.in  libhorus-start.sh.in  libhorus-stop.csh.in
src/: .gitignore  Makefile.am  horus_file.c  horus_kds.c  horus_key.c  horus_key2.c  horus_key_server.c  horus_read_write.c  kds.c  kds.h  kds_client.c  kds_rpc.h  kds_rpc.x  kds_rpc_client.c  kds_rpc_clnt.c  kds_rpc_server.c  kds_rpc_server.h  kds_rpc_svc.c  kds_rpc_xdr.c  kds_server.c  kds_server_thpool.c  test_command_shell.c  test_openssl.c  test_pthread.c  test_shell.c
test/: .gitignore  Makefile.am  README  barchart.py  benchmark.h  benchmark_key_utils.c  benchmark_read_write.c  check_aes.c  check_api.c  check_horus_key.c  gen_horus_chart.sh  horus-benchmark-kds.awk  horus-benchmark-kds.gp  horus-benchmark-kds.sh  horus-benchmark-key-branch.gp  horus-benchmark-key.gp  horus-benchmark-key.sh  key_count.py  test_aes.c
